--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,11 @@ header .mobile-menu a{
     color: #8b4e08;
 }
 
+.main-content{
+    margin-top: 170px;
+    margin-bottom: 200px;
+    background-color: #fff;
+}
 
 
 /* 푸터 */
@@ -83,7 +88,6 @@ header .mobile-menu a{
     width: 100%;
     padding-bottom: 125px;
 }
-
 @media  (max-width: 1024px) {
     .mo{
         display: block;
@@ -95,10 +99,29 @@ header .mobile-menu a{
         top: 10px;
         right: 50px;
     }
+    .inner{
+        padding-left: 1.875rem; padding-right: 1.875rem;
+    }
+    header .logo h2 {
+        font-size: 1.5rem;
+    }
+    .open-menu, .close-menu, header .mobile-menu a{
+        font-size: 1.5rem;
+    }
 }
 @media  (min-width: 1025px) {
-    .inner{padding-left: 6.25rem; padding-right: 6.25rem;}
+    .inner{
+        padding-left: 6.25rem; padding-right: 6.25rem;
+    }
     header{
         padding-left: 6.25rem; padding-right: 6.25rem;
+    }
+}
+@media screen and (max-width: 480px) {
+    header .logo h2 {
+        font-size: 1.1875rem;
+    }
+    .open-menu, .close-menu, header .mobile-menu a{
+        font-size: 1.1875rem;
     }
 }
