--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
 *{margin: 0; padding: 0; box-sizing: border-box;}
-body{background-color: #fff;}
+body{background-color: #fff; font-family: Inter Tight;}
 li{list-style: none;}
 a{text-decoration: none;}
 a, p, span, h1, h2, h3, h4, h5, h6, button{color: #333; font-family: Inter Tight;}
 button{border: none; background-color: transparent; cursor: pointer;}
-body{font-family: Inter Tight;}
 img{display: block; width: 100%;}
 .flex{display: flex;}
 .grid{display: grid;}
@@ -64,6 +63,28 @@ header .mobile-menu a{
     margin-bottom: 5px;
     color: #ccc;
 }
+.video-container{
+    top: 0;
+    opacity: 0.7;
+    width: 100%;
+    height: 50vh;
+    overflow: hidden;
+    position: fixed;
+}
+.video-container video{
+    width: 100%;
+    object-fit: cover;
+}
+.gradient-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, transparent, white);
+    pointer-events: none; 
+}
+
 .mobile-menu{
     display: none;
 }
@@ -87,6 +108,8 @@ header .mobile-menu a{
 .footer{
     width: 100%;
     padding-bottom: 125px;
+    z-index: 100;
+    position: absolute;
 }
 @media  (max-width: 1024px) {
     .mo{
