--- a/css/cv.css
+++ b/css/cv.css
@@ -1,18 +1,19 @@
 .main-content.cv{
-    margin-top: 220px;
+    margin-top: 250px;
     margin-bottom: 250px;
 }
 .cv-wrap{
     font-size: 17px;
     line-height: 24px;
     position: relative;
+    font-weight: 300;
 }
 .cv-wrap .cv-title{
-    margin-bottom: 14px;
-    font-weight: bold;
+    margin-bottom: 10px;
+    font-weight: 500;
 }
 .cv-wrap li{
-    margin-bottom: 10px;
+    margin-bottom: 8px;
 }
 .cv-wrap > div{
     margin-bottom: 50px;
@@ -20,7 +21,7 @@
 
 @media screen and (max-width: 480px) {
     .cv-wrap{
-        font-size: 14px;
+        font-size: 12px;
         line-height: 20px;
     }
 }
