--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ header{
     height: 55px;
     position: fixed;
     top: 0;
-    margin: 2.5rem 0;
+    margin: 5.5rem 0;
     z-index: 99;
     mix-blend-mode: difference;
     isolation: isolate;
@@ -67,7 +67,7 @@ header .mobile-menu a{
     top: 0;
     opacity: 0.7;
     width: 100%;
-    height: 50vh;
+    height: 20vh;
     overflow: hidden;
     position: fixed;
 }
@@ -81,7 +81,8 @@ header .mobile-menu a{
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, transparent, white);
+    /* background: linear-gradient(to bottom, transparent, white); */
+    background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0.5) 30%, rgba(255, 255, 255, 0.8) 50%, white 100%);
     pointer-events: none; 
 }
 
@@ -98,7 +99,7 @@ header .mobile-menu a{
 }
 
 .main-content{
-    margin-top: 170px;
+    margin-top: 250px;
     margin-bottom: 200px;
     background-color: #fff;
 }
