--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,34 @@ header .mobile-menu a{
     z-index: 100;
     position: absolute;
 }
+
+/* 페이드 전환 효과 */
+.page-transition {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: white; 
+    opacity: 1; 
+    z-index: 9999; 
+    transition: opacity 0.5s ease; 
+    pointer-events: none; 
+}
+
+/* 페이드아웃 상태 */
+.page-transition.hidden {
+    opacity: 0; 
+    pointer-events: none; 
+}
+/* 페이드인 상태 */
+.page-transition.visible {
+    opacity: 1; 
+    pointer-events: all;
+}
+
+
+
 @media  (max-width: 1024px) {
     .mo{
         display: block;
@@ -141,7 +169,10 @@ header .mobile-menu a{
         padding-left: 6.25rem; padding-right: 6.25rem;
     }
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 520px) {
+    header{
+        margin: 3.5rem 0;
+    }
     header .logo h2 {
         font-size: 1.1875rem;
     }
