--- a/css/work.css
+++ b/css/work.css
@@ -108,7 +108,7 @@
 
 @media (min-width: 0px) and (max-width: 520px) {
     .main-content {
-        margin-top: 200px;
+        margin-top: calc(7rem + 55px);
     }
     .work-list-wrapper{
         grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -117,6 +117,9 @@
     }
 }
 @media (min-width: 521px) and (max-width: 767px){
+    .main-content {
+        margin-top: calc(9rem + 55px);
+    }
     .work-list-wrapper{
         grid-template-columns: repeat(2, minmax(0, 1fr));
         row-gap: 1.25rem;
