--- a/css/contact.css
+++ b/css/contact.css
@@ -1,11 +1,11 @@
 .contact{
-    margin-top: 250px;
     margin-bottom: 250px;
 }
 .contact-inner{
     position: relative;
 }
 .contact h1{
+    font-size: 1.5rem;
     margin-bottom: 75px;
 }
 .contact-txt p{
