--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ header .mobile-menu a{
 .video-container video{
     width: 100%;
     object-fit: cover;
+    pointer-events: none;
 }
 .gradient-overlay {
     position: absolute;
